fix(ui): remove specific CSS to fix search box display on mobile

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -83,8 +83,6 @@
 
 .VPDocFooter a.pager-link,
 .VPLocalNavOutlineDropdown > div.items,
-.custom-block,
-.DocSearch-Modal,
-.DocSearch-Footer {
+.custom-block {
   border-radius: 12px;
 }
